<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>threeD_mapping</name>
  <version>0.0.0</version>
  <description>A modified turtlebot3 with some mapping functionalities</description>
  <maintainer email="osamasaedawad@gmail.com">usame_aw</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <depend>turtlebot3</depend>
  <depend>turtlebot3_bringup</depend>
  <depend>turtlebot3_cartographer</depend>
  <depend>turtlebot3_description</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>turtlebot3_teleop</depend>
  <depend>pointcloud_to_laserscan</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
